<resources>
    <string name="app_name">FastFixx</string>
    <string name="title_home">Home</string>
    <string name="title_education">Edukasi</string>
    <string name="title_consultation">Konsultasi</string>
    <string name="title_chat_montir">Chat</string>
    <string name="title_activity">Pesanan</string>
    <string name="title_profile">Profile Saya</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_setting">Pengaturan</string>
    <string name="title_contact">Hubungi Kami</string>
    <string name="title_data_kendaraan">Data Kendaraan</string>
    <string name="title_edit_kendaraan">Ubah Kendaraan</string>
    <string name="title_privay_policy">Kebijakan Privasi</string>
    <string name="card_one_review_value">(%1$s)</string>
    <string name="card_two_review_value">(%1$s)</string>
    <string name="card_two_distance_value">(%1$s)</string>
    <string name="card_two_price_value">(%1$s)</string>
    <string name="dummy_image">Dummy Image</string>
    <string name="icon">Icon</string>
    <string name="query_hint">Cari Bengkel</string>
    <string name="query_hint2">Cari Montir</string>
    <string name="available">Tersedia</string>
    <string name="top">Teratas</string>
    <string name="trusted">Terpercaya</string>
    <string name="tips">Tips</string>
    <string name="interior">Interior</string>
    <string name="exterior">Exterior</string>
    <string name="machine">Mesin</string>
    <string name="menu1_profile">Hubungi Kami</string>
    <string name="menu2_profile">Kebijakan Privasi</string>
    <string name="menu3_profile">Data Kendaraan</string>
    <string name="menu4_profile">Verifikasi Keamanan</string>
    <string name="menu1_setting">Ubah Kata Sandi</string>
    <string name="menu2_setting">Keluar</string>
    <string name="example_nama_profile">Muhammad Hafiz</string>
    <string name="example_title_detail_pesanan">SEP 16, 2023 10:33 PM</string>
    <string name="process">Dalam proses</string>
    <string name="done">Riwayat</string>
    <string name="cancel">Dibatalkan</string>
    <string name="search_bengkel">Cari Bengkel</string>
    <string name="search_montir">Cari Montir</string>
    <string name="example_title_detail_bengkel">Sriwijaya Motor</string>
    <string name="example_desc_detail_bengkel">Bengkel mobil resmi yang telah berdiri sejak tahun 1993, dengan menyediakan semua layanan service mobil.</string>
    <string name="title_activity_payment_methods">payment_methods</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="choose_services">Pilih Layanan<font color='#FF0000'>*</font></string>
    <string name="order_summary">Ringkasan Pesanan</string>
    <string name="section_location">Lokasi</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="dummy_nominal">Saldo: Rp100.000</string>
    <string name="example_subtitle_bengkel">Bengkel Mobil</string>
    <string name="services">Layanan</string>
    <string name="nominal">Nominal</string>
    <string name="example_item_service">Ban Bocor</string>
    <string name="example_item_price">100.000</string>
    <string name="example_subtotal_price">Rp200000</string>
    <string name="location_detail">Detail Lokasi (Patokan)<font color='#FF0000'>*</font></string>
    <string name="full_name">Nama Lengkap<font color='#FF0000'>*</font></string>
    <string name="detail_complaint">Detail Keluhan<font color='#FF0000'>*</font></string>
    <string name="example_payment_method">Cash</string>
    <string name="example_total_price">Total Pembayaran</string>
    <string name="example_total_price_2">Rp100.000</string>
    <string name="btn_pay">Bayar</string>
    <string name="subtotal">Subtotal</string>
    <string name="admin_fee">Biaya Admin</string>
    <string name="dummy_rating">4.5</string>
    <string name="dummy_review">(5K+) .</string>
    <string name="rating_review">Rating dan Ulasan</string>
    <string name="dummy_header_title_education">Vanbelt Motor</string>
    <string name="dummy_content_two">Siapkan peralatan yang Anda butuhkan, seperti kunci T ukuran 8mm, kunci shock ukuran 22 mm, obeng bermata plus, kain lap, vanbelt baru, dan palu.\n\nBuka cover CVT yang berada di bawah jok penumpang dengan menggunakan kunci T ukuran 8 mm.\n\nBuka bak CVT dengan melepas semua baut yang mengikatnya menggunakan kunci T ukuran 8 mm. Lepas bak CVT secara perlahan dengan cara menekannya ke bawah sembari menekan kick starter.\n\nLepas ring pulley bagian depan dan kipas pulley depan dengan menggunakan obeng bermata plus.\n\nLepas vanbelt lama dengan cara menariknya keluar dari pulley belakang dan pulley depan. Periksa kondisi vanbelt lama, jika ada kerusakan atau retak, maka Anda harus menggantinya dengan yang baru.\n\nPasang vanbelt baru dengan cara menyelipkannya pada bagian atas pulley belakang, kemudian putar ke bawah untuk memasukkannya ke dalam slot yang benar. Pastikan vanbelt baru tidak terganjal oleh mur pengunci pulley depan.\n\nPasang kembali ring pulley bagian depan dan kipas pulley depan dengan cara menekannya ke bawah sampai rapat dengan bosh rumah roller. Kencangkan mur pengunci pulley depan dengan menggunakan kunci shock ukuran 22 mm.\n\nPasang kembali bak CVT dengan cara menempatkannya pada posisi yang tepat, kemudian kencangkan semua baut yang mengikatnya dengan menggunakan kunci T ukuran 8 mm.\n\nPasang kembali cover CVT dengan cara menempatkannya pada posisi yang tepat, kemudian kencangkan semua baut yang mengikatnya dengan menggunakan kunci T ukuran 8 mm.\n\nSelesai. Anda dapat mencoba menyalakan motor Anda dan merasakan perbedaan performanya setelah mengganti vanbelt.</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="welcome_back_greeting">Selamat Datang Kembali.</string>
    <string name="welcome_greeting">Selamat datang.</string>
    <string name="fill_in_all_fields">Wajib masukan semua field</string>
    <string name="invalid_email">Masukan alamat email yang valid.</string>
    <string name="invalid_password">Kata sandi minimal 8 karakter.</string>
    <string name="no_internet_connection">Apakah anda offline? Periksa koneksi internet Anda, lalu coba lagi.</string>
    <string name="check_credentials">Periksa email dan sandi Anda, lalu coba lagi.</string>
    <string name="greeting">Halo,</string>
    <string name="username">%1$s %2$s!</string>
    <string name="title_timeout">Batas Akhir Pembayaran</string>
    <string name="timeout">00:00</string>
    <string name="place_order">Lanjutkan Pembayaran</string>
    <string name="title_success">Yay! Pesanan diterima</string>
    <string name="subtitle_success">Bantuan sudah di jalan, kendaraan Anda akan segera mendapat perawatan.</string>
    <string name="done_payment">Selesai</string>
    <string name="overall_rating">4.7</string>
    <string name="example_date">Desember 19, 2023</string>
    <string name="example_username">Ashlan Hildengard</string>
</resources>