<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/item_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/item_education"
        android:title="@string/title_education" />

    <item
        android:id="@+id/navigation_consultation"
        android:icon="@drawable/item_consultation"
        android:title="@string/title_consultation" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/item_activity"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/item_setting"
        android:title="@string/title_setting" />

</menu>