<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="26dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/img_container_card_two"
        android:layout_width="126dp"
        android:layout_height="152dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/img_card_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dummy_image"
            android:scaleType="centerCrop"
            android:src="@drawable/example_img_2" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_type_bengkel_card_two"
        style="@style/MonaBold10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_background"
        android:padding="4dp"
        android:text="Bengkel Resmi"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/img_container_card_two"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_info_card_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/img_container_card_two"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_bengkel_card_two">

        <TextView
            android:id="@+id/tv_title_card_two"
            style="@style/MonaSemiBold16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="Sriwijaya Motor"
            android:textColor="@color/charleston_green" />

        <LinearLayout
            android:id="@+id/ll_line_two_card_two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_star_fill" />

            <TextView
                android:id="@+id/tv_rating_card_two"
                style="@style/MonaMedium14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="4.5"
                android:textColor="@color/charleston_green" />

            <TextView
                android:id="@+id/tv_review_card_two"
                style="@style/MonaMedium14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/card_two_review_value"
                android:textColor="@color/charleston_green" />

            <ImageView
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_dot_black" />

            <TextView
                android:id="@+id/tv_duration_card_two"
                style="@style/MonaMedium14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="39 mins"
                android:textColor="@color/charleston_green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_area_card_two"
                style="@style/MonaRegular14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Kalidoni, "
                android:textColor="@color/dim_gray" />

            <TextView
                android:id="@+id/tv_city_card_two"
                style="@style/MonaRegular14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Kota Palembang"
                android:textColor="@color/dim_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_distance_card_two"
            style="@style/MonaRegular14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:text="@string/card_two_distance_value"
            android:textColor="@color/dim_gray" />

        <TextView
            android:id="@+id/tv_price_card_two"
            style="@style/MonaLight12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:text="@string/card_two_price_value"
            android:textColor="@color/black" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>