<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".feature_profile.presentation.privacy_policy.PrivacyPolicyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/cl_detail_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="1"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/tv_title_toolbar"
                style="@style/MonaSemiBold16"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginEnd="55dp"
                android:fontFamily="@font/mona_sans_bold"
                android:text="@string/title_privay_policy"
                android:textColor="@color/tertiary"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:layout_weight="6"
                android:layout_gravity="end"/>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/btn_sv_password"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            style="@style/MonaRegular14"
            android:textColor="@color/tertiary"
            android:text="@string/lorem_ipsum"/>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sv_password"
        android:layout_width="255dp"
        android:layout_height="50dp"
        style="@style/MonaSemiBold14"
        android:text="Setuju Semua"
        android:textColor="@color/white"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sv_password" />

</androidx.constraintlayout.widget.ConstraintLayout>